# Authprod

./: .env  alembic.ini  config.py  database.py  main.py  pyproject.toml
auth/: base_config.py  schemas.py
migration/: env.py
migration/versions/: 01.09.24588d61023452_new_config.py
migrations/: env.py
migrations/versions/: 2024.02.09a1b6b8781dbf_new_vers_auth.py  7d0e21972ae0_initial.py  f1e477c90c5d_auth_model.py
src/auth/: base_config.py  models_auth.py  schemas.py
src/operations/: models_opr.py  tasks.py
